night before update

--- a/active.qmd
+++ b/active.qmd
@@ -1,47 +1,45 @@
 ---
-title: "Climate Activism"
+title: "Political and Environmental Activism"
 ---
 
-*Climate change is the most essential topic to discuss right now since it affects every aspect of our life, from the environment and economy to health and society. We must act soon since the situation is grave, and I believe that everyone can contribute to the cause. As an activist, I wish to contribute to the solution by advocating for policies and techniques that promote sustainability and environmental justice.*
+*Climate change is one the most important issues to be discussed at the moment because it influences all aspects of our lives, and I think that everyone can make a difference in this matter. As an activist, I would like to make a difference in solving this problem by fighting for policies that support sustainability and environmental justice.*
 
-![](images/IMG_1519 2.jpg)
+![](images/IMG_1519%202.jpg)
 
 ### My Journey
 
-*I was just twelve years old when I began my path as a climate activist. The first time I learnt about global warming, it sparked a passion in me that has only gotten stronger with time. I grew captivated with its science and promised myself to learn more about its effects. All of my school writings concentrated around this critical issue.\
-\
-One of my first projects was to create a floating windmill, which I entered in a competition at the local university. This not only sparked an unwavering interest in renewable energy, but also demonstrated how ingenuity and creativity can be used to solve environmental challenges. This endeavor was the catalyst for my full-fledged involvement in climate advocacy.*
+*My Journey I was only twelve years old when I started my journey as an activist. The first time I heard about global warming, it ignited a fire in me that has only intensified with the passage of time. I became fascinated with its science, which made me write extensively about it in school. *
+
+*One of my first initiatives was to build a floating windmill, which I submitted to a competition at the local university. This not only ignited an unrelenting passion for renewable energy, but it also proved that creativity and innovation can be utilized to overcome environmental problems.*
 
 ![](images/IMG_6247.JPG)
 
 ### Virginia Tech Climate Action Committee
 
-*As a member of the Virginia Tech Climate Action Committee, I was able to collaborate directly with university administration, teachers, and students to create and execute ways to reduce the campus's greenhouse gas emissions. Our endeavors included energy-efficient construction projects, environmentally friendly transit choices, and significant educational campaigns. This program refined my policy-making and collaborative problem-solving abilities while also demonstrating the crucial role that academic institutions play in tackling climate change.*
+*When I was a student at Virginia PolyTech University, I was part of the Climate Action Committee, where I had the opportunity to work together with the university administration, faculty, and students to develop and implement strategies to decrease the greenhouse gas emissions of the university. This experience has helped me develop skills in policy formulation and problem-solving, while also teaching me the importance of academic institutions in addressing the issue of climate change.*
 
 ![](images/IMG_1520.jpg)
 
 ### Representing at COP25
 
-*Being a student delegate at COP25 marked a pivitol point in my advocacy. Attending the United Nations Climate Change Conference gave me a global perspective on the climate situation and the many methods that countries are adopting. Meeting with officials, scientists, and other activists from around the world was both motivating and eye-opening. It strengthened my confidence in the value of international collaboration and the critical necessity for collective action to combat climate change.*
+*Being a student delegate at COP25 was a turning point in my activism. Attending the United Nations Climate Change Conference opened my eyes to the global reality of the climate crisis and the various approaches that nations are taking. Networking with representatives, experts, and other activists from other countries was both inspiring and enlightening. This reinforced my belief in the power of global cooperation and the urgent need for a united response to the climate crisis.*
 
 ![](images/IMG_1521.jpg)
 
 ### Environmental Psychology and Hardt Hyperloop
 
-*Continuing my study, I earned a master's degree in Environmental Psychology, where I used my talents and experiences to better understand the human aspects of environmental concerns. My research at Hardt Hyperloop was focused on sustainable transportation solutions, namely novel approaches to cut carbon emissions in the transportation industry. This study was both hard and enjoyable, and it reinforced my confidence in the necessity of incorporating psychological insights into environmental efforts to promote sustainable habits and practices.*
+*Continuing my education, I received a master’s degree in Environmental Psychology, where I utilized my skills and knowledge to further comprehend the human side of environmental issues. As a UX Researcher at Hardt Hyperloop, I researched views on sustainable transportation. This role helped me build my skills in research and comprehension of human perception.*
 
 ### The Scientist Rebellion
 
-*Joining the Scientist Rebellion was a bold step that demonstrated my dedication to climate justice. This movement, made up of scientists fighting for bold changes to solve the climate crisis, allowed me to combine my scientific training with activism. We hoped that by holding peaceful protests and public rallies, we might put pressure on governments and companies to pursue more aggressive climate action. This experience helped me better appreciate civil disobedience as a tactic for social change, as well as the crucial role that scientists play in the climate movement.*
+*Taking part in the Scientist Rebellion was a very courageous act that showed my commitment to climate justice. The Scientist Rebellion is a group of scientists who are fighting for drastic changes that can solve the climate crisis. By taking part in peaceful protests and rallies, we hoped that we could force the government and corporations to take drastic measures to address climate change. This experience has taught me to value civil disobedience as a tool for social change and the importance of scientists in the climate struggle.*
 
 ### Expanding Activism
 
-*My advocacy has also taken me beyond climate change and into the Free Palestine cause. The connection between environmental justice and human rights has pushed me to broaden my involvement. Advocacy for Palestine has expanded my knowledge of global justice by demonstrating that genuine sustainability requires social equality and human dignity. This larger viewpoint has reminded me that the battle for a fair and sustainable society is multidimensional and interdependent.*
+*My activism has also led me beyond the issue of climate change and into the Free Palestine movement. The link between environmental justice and human rights has encouraged me to extend my activism. The Palestine movement has widened my understanding of global justice by showing me that true sustainability is not possible without social equality and human dignity. This broader perspective has reminded me that the struggle for a just and sustainable world is complex and interconnected.*
 
 ### Reflecting on My Journey
 
-*My engagement in these many aspects of climate advocacy has greatly influenced who I am now. Each event taught me vital insights about the intricacies of the climate catastrophe and the varied solutions required to address it. Creating the VTCJ Foundation showed me the value of community and grassroots initiatives. My work with the Virginia Tech Climate Action Committee emphasized the significance of institutional transformation. Representing at COP25 gave a global perspective, while engaging in Scientist Rebellion highlighted the importance of bold, direct action.*
+*My involvement in all these different aspects of climate activism has had a huge impact on who I am today. Every single event has given me important lessons about activism and the climate crisis. Establishing the VTCJ Foundation taught me the power of community, while attending COP25 has given me a global perspective, and Scientist Rebellion has shown me the power of taking direct action.*
 
-*Looking ahead, I am more determined than ever to continue working with groups dedicated to climate change. I want to use my experiences to inspire and motivate others, creating a culture of sustainability and resilience. Working together, we can build a future in which renewable energy is the norm, ecosystems are preserved, and all communities live in harmony with the environment.\
-\
-Thank you for showing interest in my climate advocacy. I hope that my path motivates you to take action in your own manner. Together, we can make a difference.*
+*Going forward, I am more committed than ever to continue working with organizations that are fighting climate change. I hope to use my experiences to motivate and inspire others.*
