--- a/active.qmd
+++ b/active.qmd
@@ -2,21 +2,21 @@
 title: "Political and Environmental Activism"
 ---
 
-*Climate change is one the most important issues to be discussed at the moment because it influences all aspects of our lives, and I think that everyone can make a difference in this matter. As an activist, I would like to make a difference in solving this problem by fighting for policies that support sustainability and environmental justice.*
+*Climate change is one the most important issues to be discussed at the moment because it influences all aspects of our lives, and I think that everyone can make a difference in this matter. I would like to make a difference by advocating for policies that support sustainability and environmental justice.*
 
 ![](images/IMG_1519%202.jpg)
 
 ### My Journey
 
-*My Journey I was only twelve years old when I started my journey as an activist. The first time I heard about global warming, it ignited a fire in me that has only intensified with the passage of time. I became fascinated with its science, which made me write extensively about it in school. *
+*I was only twelve years old when I started my journey as an activist. The first time I heard about global warming, I became fascinated with its science, which made me write extensively about it in school.*
 
-*One of my first initiatives was to build a floating windmill, which I submitted to a competition at the local university. This not only ignited an unrelenting passion for renewable energy, but it also proved that creativity and innovation can be utilized to overcome environmental problems.*
+*One of my first initiatives was to build a floating windmill, which I submitted to a competition at the local university. These experiences propelled me to continue my advocacy in college.*
 
 ![](images/IMG_6247.JPG)
 
 ### Virginia Tech Climate Action Committee
 
-*When I was a student at Virginia PolyTech University, I was part of the Climate Action Committee, where I had the opportunity to work together with the university administration, faculty, and students to develop and implement strategies to decrease the greenhouse gas emissions of the university. This experience has helped me develop skills in policy formulation and problem-solving, while also teaching me the importance of academic institutions in addressing the issue of climate change.*
+*When I was a student at Virginia PolyTech University, I was part of the Climate Action Committee, where I had the opportunity to work together with the university administration, faculty, and students to develop and implement strategies to decrease the greenhouse gas emissions of the university. This experience has helped me develop skills in policy formulation and team problem-solving, while also teaching me the importance of academic institutions in addressing the issue of climate change.*
 
 ![](images/IMG_1520.jpg)
 
@@ -32,7 +32,7 @@ title: "Political and Environmental Activism"
 
 ### The Scientist Rebellion
 
-*Taking part in the Scientist Rebellion was a very courageous act that showed my commitment to climate justice. The Scientist Rebellion is a group of scientists who are fighting for drastic changes that can solve the climate crisis. By taking part in peaceful protests and rallies, we hoped that we could force the government and corporations to take drastic measures to address climate change. This experience has taught me to value civil disobedience as a tool for social change and the importance of scientists in the climate struggle.*
+*The Scientist Rebellion is a group of scientists who are fighting for drastic changes that can solve the climate crisis. By taking part in peaceful protests and rallies, we hoped that we could force the government and corporations to take drastic measures to address climate change. This experience has taught me to value civil disobedience as a tool for social change and the importance of scientists in the climate struggle.*
 
 ### Expanding Activism
 
